ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Benefit__c/IKOPRO_Benefit__c.object-meta.xml
<CustomObject>
    <description>Object to store Benefit information.</description>
    <label>(Deprecated) Benefit</label>
    <nameField>
        <label>Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>