ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Benefit__c/fields/Applicable_for_External__c.field-meta.xml
<CustomField>
    <fullName>Applicable_for_External__c</fullName>
    <description>Field only to be displayed for Community users.</description>
    <formula>IF( Tier_1__c , &quot;Tier 1&quot; &amp; BR(),&quot;&quot;)
&amp;
IF( Tier_2__c , &quot;Tier 2&quot; &amp; BR(),&quot;&quot;)
&amp;
IF( Tier_3__c , &quot;Tier 3&quot; &amp; BR(),&quot;&quot;)
&amp;
IF( Inactive__c , &quot;(This Benefit is presently not active)&quot; &amp; BR(),&quot;&quot;)</formula>
    <label>Applicable for</label>
    <type>Text</type>
</CustomField>