ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Benefit__c/fields/Application_Required__c.field-meta.xml
<CustomField>
    <fullName>Application_Required__c</fullName>
    <label>Application Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>