ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Benefit__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Benefit description (Rich text area field that will be copied to the Contractor Benefit record upon creation - using Process Builder)</description>
    <label>Description</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>