ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Benefit__c/fields/Description_Long_Txt_Area__c.field-meta.xml
<CustomField>
    <fullName>Description_Long_Txt_Area__c</fullName>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>