ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Benefit__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked if this IKOPRO Benefit should not be used for Tiers anymore (i.e. &apos;Retired&apos; Benefit). When this checkbox is ticked, the &apos;inactive for Tier&apos;-checkboxes will automatically be ticked, so the benefit</description>
    <inlineHelpText>Ticked if this IKOPRO Benefit should not be used for Tiers anymore (i.e. &apos;Retired&apos; Benefit)</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>