ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Benefit__c/fields/Inactive_Tier_3__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Tier_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inactive Benefits will not be taken into account when adding benefits to Tiers.</description>
    <label>Inactive for Tier 3</label>
    <type>Checkbox</type>
</CustomField>