ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Benefit__c/fields/Required_Documents__c.field-meta.xml
<CustomField>
    <fullName>Required_Documents__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of required documents that need to be uploaded if applying for this benefit.</description>
    <label># Required Documents</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>