ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Benefit__c/fields/Tier_3__c.field-meta.xml
<CustomField>
    <fullName>Tier_3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if this benefit is applicable for this Tier.</inlineHelpText>
    <label>Tier 3</label>
    <type>Checkbox</type>
</CustomField>