ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Benefit__c/fields/Tiers__c.field-meta.xml
<CustomField>
    <fullName>Tiers__c</fullName>
    <description>Placeholder to store all tier numbers a benefit is applicable for. (filled with Process Builder and used within the flow to automatically add contractor benefits to the Contractor Account based on the chosen (new) Tier.</description>
    <label>Tiers</label>
    <length>16</length>
    <type>Text</type>
</CustomField>