ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Benefit__c/validationRules/Tiers_are_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Tiers_are_required</fullName>
    <active>false</active>
    <description>At least one of the Tiers should be chosen.</description>
    <errorConditionFormula>AND(
 Tier_1__c = FALSE,
Tier_2__c = FALSE,
Tier_3__c = FALSE
)</errorConditionFormula>
    <errorMessage>Please choose at least one of the Tiers this benefit is applicable for.</errorMessage>
</ValidationRule>