ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Benefit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tier_1__c</columns>
    <columns>Tier_2__c</columns>
    <columns>Tier_3__c</columns>
    <columns>Date_Active__c</columns>
    <columns>Application_Required__c</columns>
    <columns>Approval_Required__c</columns>
    <columns>Tiers__c</columns>
    <columns>Date_Retired__c</columns>
    <columns>Inactive_Tier_1__c</columns>
    <columns>Inactive_Tier_2__c</columns>
    <columns>Inactive_Tier_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Benefits</label>
    <sharedTo>
        <group>Loyalty_Team</group>
        <group>Partner_Community_Users</group>
        <group>System_Administrators</group>
    </sharedTo>
</ListView>