ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Benefit__c/listViews/Tier_1_Benefits.listView-meta.xml
<ListView>
    <fullName>Tier_1_Benefits</fullName>
    <columns>NAME</columns>
    <columns>Application_Required__c</columns>
    <columns>Approval_Required__c</columns>
    <columns>Date_Active__c</columns>
    <columns>Tier_1__c</columns>
    <columns>Date_Retired__c</columns>
    <columns>Inactive_Tier_1__c</columns>
    <columns>Inactive_Tier_2__c</columns>
    <columns>Inactive_Tier_3__c</columns>
    <columns>Inactive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tier_1__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Tier 1 Benefits</label>
    <sharedTo>
        <group>Loyalty_Team</group>
        <group>Partner_Community_Users</group>
        <group>System_Administrators</group>
    </sharedTo>
</ListView>